--- a/src/css/aboutme.css
+++ b/src/css/aboutme.css
@@ -11,6 +11,7 @@
     width: 100%;
     height: 100vh;
     box-sizing: border-box;
+    background: linear-gradient(to top, #56a3e2 0%, #FFFFFF 50%); /* Gradient that transitions to white */
 }
 
 #titleAbout {
@@ -27,13 +28,13 @@
 }
 
 #text-about-me {
-        background-color: #D7E8FA;
-        border: 2px solid #AEC6DF;
-        border-radius: 8px;
-        padding: 0 5% 0 5%;
-        box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-        width: 90%;
-        min-width: 500px;
+    background-color: #D7E8FA;
+    border: 2px solid #AEC6DF;
+    border-radius: 8px;
+    padding: 0 5% 0 5%;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    width: 90%;
+    min-width: 500px;
 }
 
 @media (max-width: 1440px) {
@@ -48,10 +49,9 @@
     }
 }
 
-
 #image-container {
-    flex: 0 0 600px;
-    max-width: 600px;
+    flex: 0 0 500px;
+    max-width: 500px;
     min-width: 300px;
     height: fit-content;
     border: 2px solid #AEC6DF;
@@ -65,4 +65,3 @@
     display: block;
     vertical-align: bottom;
 }
-
