--- a/src/css/links.css
+++ b/src/css/links.css
@@ -1,14 +1,17 @@
 .linksPage {
-    margin-left: 200px;
     padding: 20px;
+    display: flex;
+    flex-direction: column;
     align-items: center;
-    width: 100%; 
+    width: 100%;
 }
 
 #titleLinks {
-    font-size: 80px;
+    font-size: 4rem; /* Responsive font size */
     text-decoration: underline #FF7F50;
     text-align: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 #linksSection {
@@ -17,8 +20,6 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    height: 100%;
-    box-sizing: border-box;
 }
 
 #what-i-do {
@@ -26,38 +27,36 @@
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    width: 100%;
-    height: 100%;
-    box-sizing: border-box;
+    flex-wrap: wrap; /* Wrap items on smaller screens */
 }
 
-#what-i-do img {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-    box-sizing: border-box;
+#linksSection h2, #linksSection h3 {
+    text-align: center;
+    margin: 10px 0;
 }
 
-#what-i-do img:hover {
+#linksSection img, #what-i-do img {
+    width: 80%; /* Relative width */
+    max-width: 100px; /* Max width to ensure images are not too large */
+    transition: background-color 0.3s; /* Smooth transition for hover */
+}
+
+#linksSection img:hover, #what-i-do img:hover {
     background-color: #e9ecf0;
 }
 
-#linksSection img:hover {
-    background-color: #e9ecf0;
-}
+/* Media Queries for responsive adjustments */
+@media (max-width: 768px) {
+    #titleLinks {
+        font-size: 2.5rem;
+    }
 
-#linksSection h2 {
-    font-size: xxx-large;
-}
+    #what-i-do {
+        flex-direction: column; /* Stack items vertically on smaller screens */
+        align-items: center;
+    }
 
-#linksSection h3 {
-    font-size: x-large;
-    text-decoration: underline #56a3e2;
-}
-
-#linksSection img {
-    height: 100px;
+    #linksSection img, #what-i-do img {
+        max-width: 75px;
+    }
 }
