--- a/src/css/welcome.css
+++ b/src/css/welcome.css
@@ -28,6 +28,11 @@ html, body {
     text-shadow: 2px 2px 4px rgba(0,0,0,0.1);
 }
 
+.welcome-screen h3 {
+    font-size: 16px;
+    text-shadow: 2px 2px 4px rgba(0,0,0,0.1);
+}
+
 .welcome-screen button {
     font-size: 20px;
     padding: 10px 20px;
