--- a/src/css/index.css
+++ b/src/css/index.css
@@ -56,6 +56,11 @@ ul li:hover {
 }
 
 
+ul li a:hover {
+  text-decoration: none;
+  color: white;
+}
+
 ul li a {
   text-decoration: none;
   color: black;
