--- a/src/css/links.css
+++ b/src/css/links.css
@@ -6,6 +6,25 @@
     width: 100%;
 }
 
+#socials {
+    flex-direction: row;
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    gap: 10px;
+    margin-right: 10px;
+}
+
+#linkSocials {
+    margin-left: 30px;
+    gap: 10px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    
+}
+
 #titleLinks {
     font-size: 4rem; /* Responsive font size */
     text-decoration: underline #FF7F50;
@@ -20,6 +39,9 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
+    background-color: #D7E8FA;
+    border: #AEC6DF solid 1px;
+    border-radius: 100px;
 }
 
 #what-i-do {
@@ -39,6 +61,10 @@
     width: 80%; /* Relative width */
     max-width: 100px; /* Max width to ensure images are not too large */
     transition: background-color 0.3s; /* Smooth transition for hover */
+}
+
+#what-i-do img {
+    margin-left: 50px;
 }
 
 
