--- a/src/css/links.css
+++ b/src/css/links.css
@@ -4,6 +4,7 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
+    height: 100vh;
 }
 
 #socials {
@@ -36,9 +37,10 @@
 #linksSection {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: top;
     align-items: center;
     width: 100%;
+    height: 100%;
     background-color: #D7E8FA;
     border: #AEC6DF solid 1px;
     border-radius: 100px;
