--- a/src/css/errorpage.css
+++ b/src/css/errorpage.css
@@ -8,6 +8,7 @@
     justify-content: center;
     text-align: center;
     height: 100vh;
+    width: 100vh;
     margin: 0;
     padding: 20px;
   }
