--- a/src/css/index.css
+++ b/src/css/index.css
@@ -3,6 +3,16 @@
 }
 
 
+
+.open-sans-body {
+  font-family: "Open Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 100;
+}
+
 #title {
   padding-bottom: 0;
   padding-top: 0;
