--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -1,22 +1,49 @@
 .projectPage {
     display: flex;
-    justify-content: left;
+    flex-direction: column;
+    justify-content: center;
     height: 100%;
 }
 
+#title {
+    margin-left: 20px;
+}
+
 #outlet {
-    flex-grow: 1;
     margin-left: 200px;
-    height: 100vh;
-    overflow-y: auto;
-    margin-right: 10px;
-    
+    height: auto;
+    margin-right: 10px; 
 }
 
 .projectColumn {
-    display: flex;
-    flex-direction: column;
-    margin: 20px;
+    display: grid;
+    justify-content: center;
+    justify-items: center;
+    grid-template-columns: repeat(3,1fr);
+    grid-template-rows: repeat(2,1fr);
+    height: 100vh;
+    width: 100vh;
+    column-gap: 5%;
+    margin-left: 40px;
+     /* Responsive settings */
+     @media (max-width: 1600px) {
+        grid-template-columns: repeat(2, 1fr); 
+        width: 120%;
+        column-gap: 5%;
+        row-gap: 5%;
+    }
+
+    @media (max-width: 1150px) {
+        grid-template-columns: repeat(1, 1fr); 
+        width: 100%;
+        column-gap: 5%;
+    }
+
+    @media (max-width: 480px) {
+        grid-template-columns: 1fr; 
+        width: 100vw - 10px;
+        height: auto; 
+    }
 }
 
 .projectCard {
@@ -24,9 +51,9 @@
     flex-direction: column;
     align-items: center;
     width: 150%;
+    height: 425px;
     max-width: 350px;  
-    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-    margin: 20px auto;  
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);  
     padding: 20px;
     background-color: #f5f5f5;
     border-radius: 8px;
@@ -86,8 +113,9 @@
     background-color: #0056b3;
 }
 
-html, body {
+/* html, body {
     height: 100%;
     margin: 0;
     padding: 0;
-}
+} */
+
