--- a/src/css/resume.css
+++ b/src/css/resume.css
@@ -11,13 +11,12 @@
     font-size: 80px;
     text-decoration: underline;
     text-align: center;
-    margin: 20px 0;
+    margin: 20px 0 0 0;
 }
 
 #resume-section {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     align-items: center;
     width: 100%;
     height: 100vh;
